--- a/app/styles/global.less
+++ b/app/styles/global.less
@@ -1,1 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+
+html {
+  font-family: 'Roboto', sans-serif;
+  body {
+    :global(.section) {
+      margin-top: 10px;
+    }
+  }
+}
